crates/spelldawn/tests/it/core/snapshots/it__core__raid_tests__activate_room.snap
---
source: crates/spelldawn/tests/it/core/raid_tests.rs
assertion_line: 120
expression: "Summary::summarize(&response)"
---

command_list: 
    UpdateGameView: 
        user: 
            side: Overlord
            player_info: 
                name: "Test Overlord Identity"
                portrait: "<SpriteAddress>"
                portrait_frame: "<SpriteAddress>"
                card_back: "<SpriteAddress>"
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 0
            score: 0
            can_take_action: false
        opponent: 
            side: Champion
            player_info: 
                name: "Test Champion Identity"
                portrait: "<SpriteAddress>"
                portrait_frame: "<SpriteAddress>"
                card_back: "<SpriteAddress>"
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 1
            score: 0
            can_take_action: true
        raid_active: true
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_identity: 
                sorting_key: 1
                position: ObjectPositionIdentityContainer { owner: User }
            opponent_identity: 
                sorting_key: 2
                position: ObjectPositionRaid
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O0
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Overlord Identity"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
        card_id: O44
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "5"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Minion End Raid"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
        card_id: O45
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Scheme 31"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
        card_id: C0
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Champion Identity"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
        card_id: C11
        revealed_to_viewer: false
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        card_id: C45
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "3"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Weapon 3 Attack 12 Boost 3 Cost"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
    UpdateGameView: 
        user: 
            side: Overlord
            player_info: 
                name: "Test Overlord Identity"
                portrait: "<SpriteAddress>"
                portrait_frame: "<SpriteAddress>"
                card_back: "<SpriteAddress>"
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 0
            score: 0
            can_take_action: false
        opponent: 
            side: Champion
            player_info: 
                name: "Test Champion Identity"
                portrait: "<SpriteAddress>"
                portrait_frame: "<SpriteAddress>"
                card_back: "<SpriteAddress>"
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 1
            score: 0
            can_take_action: true
        raid_active: true
        controls: 
            node: 
                text: "Waiting for Opponent..."
        card_anchor_nodes: 
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_identity: 
                sorting_key: 1
                position: ObjectPositionIdentityContainer { owner: User }
            opponent_identity: 
                sorting_key: 2
                position: ObjectPositionRaid
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O0
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Overlord Identity"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
        card_id: O44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "5"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Minion End Raid"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
        card_id: O45
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Scheme 31"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
        card_id: C0
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Champion Identity"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
        card_id: C11
        revealed_to_viewer: false
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        card_id: C45
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "3"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Weapon 3 Attack 12 Boost 3 Cost"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
channel_response: 
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
                name: "Test Champion Identity"
                portrait: "<SpriteAddress>"
                portrait_frame: "<SpriteAddress>"
                card_back: "<SpriteAddress>"
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 1
            score: 0
            can_take_action: true
        opponent: 
            side: Overlord
            player_info: 
                name: "Test Overlord Identity"
                portrait: "<SpriteAddress>"
                portrait_frame: "<SpriteAddress>"
                card_back: "<SpriteAddress>"
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 0
            score: 0
            can_take_action: false
        raid_active: true
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_identity: 
                sorting_key: 2
                position: ObjectPositionRaid
            opponent_identity: 
                sorting_key: 1
                position: ObjectPositionIdentityContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O0
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Overlord Identity"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
        card_id: O44
        revealed_to_viewer: false
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        card_id: O45
        revealed_to_viewer: false
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        card_id: C0
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Champion Identity"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
        card_id: C11
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
            top_left_icon: "1"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Champion Spell"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
        card_id: C45
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "3"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Weapon 3 Attack 12 Boost 3 Cost"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
    MoveMultipleGameObjects: 
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
                name: "Test Champion Identity"
                portrait: "<SpriteAddress>"
                portrait_frame: "<SpriteAddress>"
                card_back: "<SpriteAddress>"
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 1
            score: 0
            can_take_action: true
        opponent: 
            side: Overlord
            player_info: 
                name: "Test Overlord Identity"
                portrait: "<SpriteAddress>"
                portrait_frame: "<SpriteAddress>"
                card_back: "<SpriteAddress>"
            valid_rooms_to_visit: 
            mana: 996
            action_tracker: 0
            score: 0
            can_take_action: false
        raid_active: true
        controls: 
            node: 
                text: "Test Weapon 3 Attack 12 Boost 3 Cost\n1\u{f06d}"
                text: "Continue"
        card_anchor_nodes: 
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_identity: 
                sorting_key: 2
                position: ObjectPositionRaid
            opponent_identity: 
                sorting_key: 1
                position: ObjectPositionIdentityContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O0
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Overlord Identity"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
        card_id: O44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "5"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Minion End Raid"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
        card_id: O45
        revealed_to_viewer: false
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        card_id: C0
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Champion Identity"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
        card_id: C11
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
            top_left_icon: "1"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Champion Spell"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
        card_id: C45
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "3"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Weapon 3 Attack 12 Boost 3 Cost"
            rules_text: "<RulesText>"
            targeting: 
                can_play: false
