crates/spelldawn/tests/it/core/snapshots/it__core__raid_tests__complete_raid.snap
---
source: crates/spelldawn/tests/it/core/raid_tests.rs
assertion_line: 366
expression: "Summary::summarize(&response)"
---

command_list: 
    CreateOrUpdateCard: 
        card: 
            card_id: O1
            revealed_to_viewer: false
            is_face_up: false
            card_icons: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
        create_position: 
            sorting_key: 4294967295
            position: ObjectPositionDeck { owner: Opponent }
        create_animation: Unspecified
    MoveGameObjects: 
        id: O1
        position: 
            sorting_key: 11
            position: ObjectPositionHand { owner: Opponent }
    UpdateGameView: 
        opponent: 
            side: Overlord
            action_tracker: 3
        current_priority: Opponent
        raid_active: false
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
    DisplayGameMessage: Dusk
channel_response: 
    CreateOrUpdateCard: 
        card: 
            card_id: O1
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
                top_left_icon: "1"
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Overlord Spell"
                rules_text: "<RulesText>"
                targeting: 
                    can_play: true
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionStaging
        create_animation: DrawCard
    MoveGameObjects: 
        id: O1
        position: 
            sorting_key: 11
            position: ObjectPositionHand { owner: User }
    UpdateGameView: 
        user: 
            side: Overlord
            action_tracker: 3
        current_priority: User
        raid_active: false
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
    DisplayGameMessage: Dusk
