crates/spelldawn/tests/it/core/snapshots/it__core__raid_tests__initiate_raid.snap
---
source: crates/spelldawn/tests/it/core/raid_tests.rs
assertion_line: 78
expression: "Summary::run(&response)"
---

command_list: 
    MoveGameObjects: 
        id: Identity(User)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: User }
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            action_tracker: 1
            can_take_action: false
        opponent: 
            side: Overlord
            can_take_action: true
        raid_active: true
    CreateOrUpdateCard: 
        card: 
            card_id: C11
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                targeting: 
                    can_play: false
        create_position: 
            sorting_key: 6
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    RunInParallel: 
        MoveGameObjects: 
            id: O44
            position: 
                sorting_key: 1
                position: ObjectPositionRaid
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 0
                position: ObjectPositionRaid
        MoveGameObjects: 
            id: Identity(User)
            position: 
                sorting_key: 2
                position: ObjectPositionRaid
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "Waiting for Opponent..."
        card_anchor_nodes: 
channel_response: 
    VisitRoom: 
        initiator: Opponent
        room_id: RoomA
        visit_type: InitiateRaid
    Delay: 500
    MoveGameObjects: 
        id: Identity(Opponent)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: Opponent }
    UpdateGameView: 
        user: 
            side: Overlord
            can_take_action: true
        opponent: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            action_tracker: 1
            can_take_action: false
        raid_active: true
    RunInParallel: 
        MoveGameObjects: 
            id: O44
            position: 
                sorting_key: 1
                position: ObjectPositionRaid
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 0
                position: ObjectPositionRaid
        MoveGameObjects: 
            id: Identity(Opponent)
            position: 
                sorting_key: 2
                position: ObjectPositionRaid
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "Raid:"
                text: "Activate"
                text: "Pass"
        card_anchor_nodes: 
